# imhotep_pmd

./: .gitignore  .pre-commit-config.yaml  README.md  jenkins.sh  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml
imhotep_pmd/: plugin.py
java/: .gitignore  pom.xml
java/src/main/java/: MyJavaProgram.java
java/src/test/java/: MyJavaProgramTest.java
